--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,43 @@
 /*  your css code here. If applicable */
+*{
+    margin: 0;
+    padding: 0;
+}
+body{
+    background-color: #548687;
+    text-align: center;
+}
+.container{
+    height: 70vh;
+    display: flex;
+    
+    justify-content: center;
+    align-items: center;
+}
+.game{
+    height: 60vmin;
+    width: 60vmin;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 1.5vmin;
+}
+.box{
+    height: 18vmin;
+    width: 18vmin;
+    border-radius: 1rcm;
+    border: none;
+    box-shadow: 0 0 1rcm rgba(0,0,0,0.3);
+    font-size: 8vmin;
+    color: #b0413e;
+    background-color: #ffffc7;
+}
+#reset-btn{
+    padding: 1rcm;
+    font-size: 1.25rcm;
+    background-color: #191913;
+    color: #fff;
+    border-radius: 1rcm;
+    border:none;
+}
